Fixed overflow-x from animation

--- a/src/styles/Body.module.scss
+++ b/src/styles/Body.module.scss
@@ -231,6 +231,7 @@
         margin-left: 0;
         margin-right: 0;
         width: 100%;
+        overflow-x: hidden;
     }
 
     .home{
